tests/specs/ecosystem/pdf/pdftext/1_0_8.test
pdf/pdftext/1.0.8
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /test.ts:3:14
  | 
3 | export const test = async () => {
  |              ^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: async functions without a return statement can have a return type of either 'Promise<void>' or 'Promise<never>'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-nested-javascript]: referenced a JavaScript module without type declarations from a TypeScript module
 --> /src/pdf.mjs
  = hint: add a type declaration (d.ts) for the JavaScript module, or rewrite it to TypeScript

  info: JavaScript files with no corresponding declaration require type inference to be type checked
  info: fast check avoids type inference, so referencing a JavaScript file with no type declarations is not supported
  docs: https://jsr.io/go/slow-type-unsupported-nested-javascript


